package engine

import (
	"context"
	"database/sql"
	"encoding/json"
	"fmt"
	"time"

	commonv1 "github.com/redbco/redb-open/api/proto/common/v1"
	corev1 "github.com/redbco/redb-open/api/proto/core/v1"
	"google.golang.org/protobuf/types/known/structpb"
)

// ListResourceContainers lists resource containers with filters
func (s *Server) ListResourceContainers(ctx context.Context, req *corev1.ListResourceContainersRequest) (*corev1.ListResourceContainersResponse, error) {
	defer s.trackOperation()()

	filter := req.Filter
	if filter == nil {
		return &corev1.ListResourceContainersResponse{
			Message: "Filter is required",
			Success: false,
			Status:  commonv1.Status_STATUS_ERROR,
		}, nil
	}

	// Get workspace_id from workspace name
	var workspaceID string
	if filter.WorkspaceId != "" {
		err := s.engine.db.Pool().QueryRow(ctx, `
			SELECT workspace_id FROM workspaces WHERE workspace_name = $1
		`, filter.WorkspaceId).Scan(&workspaceID)

		if err != nil {
			if err == sql.ErrNoRows {
				return &corev1.ListResourceContainersResponse{
					Message: "Workspace not found",
					Success: false,
					Status:  commonv1.Status_STATUS_ERROR,
				}, nil
			}
			return &corev1.ListResourceContainersResponse{
				Message: fmt.Sprintf("Failed to get workspace: %v", err),
				Success: false,
				Status:  commonv1.Status_STATUS_ERROR,
			}, nil
		}
	}

	// Build query with filters
	query := `
		SELECT 
			container_id, tenant_id, workspace_id, resource_uri, protocol, scope,
			object_type, object_name, database_id, instance_id, integration_id,
			mcpserver_id, connected_to_node_id, owner_id, status::text, status_message,
			last_seen, online, container_metadata, enriched_metadata, database_type,
			vendor, item_count, size_bytes, created, updated
		FROM resource_containers
		WHERE 1=1
	`

	args := []interface{}{}
	argIdx := 1

	if workspaceID != "" {
		query += fmt.Sprintf(" AND workspace_id = $%d", argIdx)
		args = append(args, workspaceID)
		argIdx++
	}

	if filter.Protocol != "" {
		query += fmt.Sprintf(" AND protocol = $%d", argIdx)
		args = append(args, filter.Protocol)
		argIdx++
	}

	if filter.Scope != "" {
		query += fmt.Sprintf(" AND scope = $%d", argIdx)
		args = append(args, filter.Scope)
		argIdx++
	}

	if filter.ObjectType != "" {
		query += fmt.Sprintf(" AND object_type = $%d", argIdx)
		args = append(args, filter.ObjectType)
		argIdx++
	}

	if filter.DatabaseType != "" {
		query += fmt.Sprintf(" AND database_type = $%d", argIdx)
		args = append(args, filter.DatabaseType)
		argIdx++
	}

	if filter.Status != "" {
		query += fmt.Sprintf(" AND status = $%d::status_enum", argIdx)
		args = append(args, filter.Status)
		argIdx++
	}

	query += " ORDER BY created DESC"

	if filter.Limit > 0 {
		query += fmt.Sprintf(" LIMIT $%d", argIdx)
		args = append(args, filter.Limit)
		argIdx++
	}

	if filter.Offset > 0 {
		query += fmt.Sprintf(" OFFSET $%d", argIdx)
		args = append(args, filter.Offset)
		argIdx++
	}

	rows, err := s.engine.db.Pool().Query(ctx, query, args...)
	if err != nil {
		return &corev1.ListResourceContainersResponse{
			Message: fmt.Sprintf("Failed to list resource containers: %v", err),
			Success: false,
			Status:  commonv1.Status_STATUS_ERROR,
		}, nil
	}
	defer rows.Close()

	var containers []*corev1.ResourceContainer
	for rows.Next() {
		var container corev1.ResourceContainer
		var containerMetadataJSON, enrichedMetadataJSON []byte
		var created, updated, lastSeen time.Time
		var databaseID, instanceID, integrationID, mcpserverID sql.NullString

		err := rows.Scan(
			&container.ContainerId,
			&container.TenantId,
			&container.WorkspaceId,
			&container.ResourceUri,
			&container.Protocol,
			&container.Scope,
			&container.ObjectType,
			&container.ObjectName,
			&databaseID,
			&instanceID,
			&integrationID,
			&mcpserverID,
			&container.ConnectedToNodeId,
			&container.OwnerId,
			&container.Status,
			&container.StatusMessage,
			&lastSeen,
			&container.Online,
			&containerMetadataJSON,
			&enrichedMetadataJSON,
			&container.DatabaseType,
			&container.Vendor,
			&container.ItemCount,
			&container.SizeBytes,
			&created,
			&updated,
		)
		if err != nil {
			continue
		}

		if databaseID.Valid {
			container.DatabaseId = databaseID.String
		}
		if instanceID.Valid {
			container.InstanceId = instanceID.String
		}
		if integrationID.Valid {
			container.IntegrationId = integrationID.String
		}
		if mcpserverID.Valid {
			container.McpserverId = mcpserverID.String
		}

		container.Created = created.Format(time.RFC3339)
		container.Updated = updated.Format(time.RFC3339)
		container.LastSeen = lastSeen.Format(time.RFC3339)

		// Parse metadata
		if len(containerMetadataJSON) > 0 {
			var metadataMap map[string]interface{}
			if err := json.Unmarshal(containerMetadataJSON, &metadataMap); err == nil {
				container.ContainerMetadata, _ = structpb.NewStruct(metadataMap)
			}
		}

		if len(enrichedMetadataJSON) > 0 {
			var enrichedMap map[string]interface{}
			if err := json.Unmarshal(enrichedMetadataJSON, &enrichedMap); err == nil {
				container.EnrichedMetadata, _ = structpb.NewStruct(enrichedMap)
			}
		}

		containers = append(containers, &container)
	}

	// Get total count if needed
	var totalCount int32
	if len(containers) > 0 {
		countQuery := `SELECT COUNT(*) FROM resource_containers WHERE 1=1`
		countArgs := []interface{}{}
		countArgIdx := 1

		if workspaceID != "" {
			countQuery += fmt.Sprintf(" AND workspace_id = $%d", countArgIdx)
			countArgs = append(countArgs, workspaceID)
			countArgIdx++
		}

		if filter.Protocol != "" {
			countQuery += fmt.Sprintf(" AND protocol = $%d", countArgIdx)
			countArgs = append(countArgs, filter.Protocol)
			countArgIdx++
		}

		if filter.Scope != "" {
			countQuery += fmt.Sprintf(" AND scope = $%d", countArgIdx)
			countArgs = append(countArgs, filter.Scope)
			countArgIdx++
		}

		if filter.ObjectType != "" {
			countQuery += fmt.Sprintf(" AND object_type = $%d", countArgIdx)
			countArgs = append(countArgs, filter.ObjectType)
			countArgIdx++
		}

		s.engine.db.Pool().QueryRow(ctx, countQuery, countArgs...).Scan(&totalCount)
	}

	return &corev1.ListResourceContainersResponse{
		Containers: containers,
		TotalCount: totalCount,
		Message:    fmt.Sprintf("Found %d resource containers", len(containers)),
		Success:    true,
		Status:     commonv1.Status_STATUS_SUCCESS,
	}, nil
}

// GetResourceContainer gets a resource container by ID
func (s *Server) GetResourceContainer(ctx context.Context, req *corev1.GetResourceContainerRequest) (*corev1.GetResourceContainerResponse, error) {
	defer s.trackOperation()()

	if req.ContainerId == "" {
		return &corev1.GetResourceContainerResponse{
			Message: "container_id is required",
			Success: false,
			Status:  commonv1.Status_STATUS_ERROR,
		}, nil
	}

	var container corev1.ResourceContainer
	var containerMetadataJSON, enrichedMetadataJSON []byte
	var created, updated, lastSeen time.Time
	var databaseID, instanceID, integrationID, mcpserverID sql.NullString

	err := s.engine.db.Pool().QueryRow(ctx, `
		SELECT 
			container_id, tenant_id, workspace_id, resource_uri, protocol, scope,
			object_type, object_name, database_id, instance_id, integration_id,
			mcpserver_id, connected_to_node_id, owner_id, status::text, status_message,
			last_seen, online, container_metadata, enriched_metadata, database_type,
			vendor, item_count, size_bytes, created, updated
		FROM resource_containers
		WHERE container_id = $1
	`, req.ContainerId).Scan(
		&container.ContainerId,
		&container.TenantId,
		&container.WorkspaceId,
		&container.ResourceUri,
		&container.Protocol,
		&container.Scope,
		&container.ObjectType,
		&container.ObjectName,
		&databaseID,
		&instanceID,
		&integrationID,
		&mcpserverID,
		&container.ConnectedToNodeId,
		&container.OwnerId,
		&container.Status,
		&container.StatusMessage,
		&lastSeen,
		&container.Online,
		&containerMetadataJSON,
		&enrichedMetadataJSON,
		&container.DatabaseType,
		&container.Vendor,
		&container.ItemCount,
		&container.SizeBytes,
		&created,
		&updated,
	)

	if err != nil {
		if err == sql.ErrNoRows {
			return &corev1.GetResourceContainerResponse{
				Message: "Resource container not found",
				Success: false,
				Status:  commonv1.Status_STATUS_ERROR,
			}, nil
		}
		return &corev1.GetResourceContainerResponse{
			Message: fmt.Sprintf("Failed to get resource container: %v", err),
			Success: false,
			Status:  commonv1.Status_STATUS_ERROR,
		}, nil
	}

	if databaseID.Valid {
		container.DatabaseId = databaseID.String
	}
	if instanceID.Valid {
		container.InstanceId = instanceID.String
	}
	if integrationID.Valid {
		container.IntegrationId = integrationID.String
	}
	if mcpserverID.Valid {
		container.McpserverId = mcpserverID.String
	}

	container.Created = created.Format(time.RFC3339)
	container.Updated = updated.Format(time.RFC3339)
	container.LastSeen = lastSeen.Format(time.RFC3339)

	// Parse metadata
	if len(containerMetadataJSON) > 0 {
		var metadataMap map[string]interface{}
		if err := json.Unmarshal(containerMetadataJSON, &metadataMap); err == nil {
			container.ContainerMetadata, _ = structpb.NewStruct(metadataMap)
		}
	}

	if len(enrichedMetadataJSON) > 0 {
		var enrichedMap map[string]interface{}
		if err := json.Unmarshal(enrichedMetadataJSON, &enrichedMap); err == nil {
			container.EnrichedMetadata, _ = structpb.NewStruct(enrichedMap)
		}
	}

	return &corev1.GetResourceContainerResponse{
		Container: &container,
		Message:   "Resource container retrieved successfully",
		Success:   true,
		Status:    commonv1.Status_STATUS_SUCCESS,
	}, nil
}

// ListResourceItems lists resource items with filters
func (s *Server) ListResourceItems(ctx context.Context, req *corev1.ListResourceItemsRequest) (*corev1.ListResourceItemsResponse, error) {
	defer s.trackOperation()()

	filter := req.Filter
	if filter == nil {
		return &corev1.ListResourceItemsResponse{
			Message: "Filter is required",
			Success: false,
			Status:  commonv1.Status_STATUS_ERROR,
		}, nil
	}

	// Get workspace_id from workspace name
	var workspaceID string
	if filter.WorkspaceId != "" {
		err := s.engine.db.Pool().QueryRow(ctx, `
			SELECT workspace_id FROM workspaces WHERE workspace_name = $1
		`, filter.WorkspaceId).Scan(&workspaceID)

		if err != nil {
			if err == sql.ErrNoRows {
				return &corev1.ListResourceItemsResponse{
					Message: "Workspace not found",
					Success: false,
					Status:  commonv1.Status_STATUS_ERROR,
				}, nil
			}
			return &corev1.ListResourceItemsResponse{
				Message: fmt.Sprintf("Failed to get workspace: %v", err),
				Success: false,
				Status:  commonv1.Status_STATUS_ERROR,
			}, nil
		}
	}

	// Build query with filters
	query := `
		SELECT 
			item_id, container_id, tenant_id, workspace_id, resource_uri, protocol,
			scope, item_type, item_name, item_display_name, item_path, data_type, unified_data_type,
			is_nullable, is_primary_key, is_unique, is_indexed, is_required, is_array,
			array_dimensions, default_value, max_length, precision, scale,
			is_privileged, privileged_classification, detection_confidence, detection_method,
			ordinal_position, created, updated
		FROM resource_items
		WHERE 1=1
	`

	args := []interface{}{}
	argIdx := 1

	if workspaceID != "" {
		query += fmt.Sprintf(" AND workspace_id = $%d", argIdx)
		args = append(args, workspaceID)
		argIdx++
	}

	if filter.ContainerId != "" {
		query += fmt.Sprintf(" AND container_id = $%d", argIdx)
		args = append(args, filter.ContainerId)
		argIdx++
	}

	if filter.ItemType != "" {
		query += fmt.Sprintf(" AND item_type = $%d", argIdx)
		args = append(args, filter.ItemType)
		argIdx++
	}

	if filter.DataType != "" {
		query += fmt.Sprintf(" AND data_type = $%d", argIdx)
		args = append(args, filter.DataType)
		argIdx++
	}

	if filter.UnifiedDataType != "" {
		query += fmt.Sprintf(" AND unified_data_type = $%d", argIdx)
		args = append(args, filter.UnifiedDataType)
		argIdx++
	}

	if filter.IsPrimaryKey {
		query += " AND is_primary_key = true"
	}

	if filter.IsUnique {
		query += " AND is_unique = true"
	}

	if filter.IsIndexed {
		query += " AND is_indexed = true"
	}

	if filter.IsPrivileged {
		query += " AND is_privileged = true"
	}

	query += " ORDER BY ordinal_position NULLS LAST, created ASC"

	if filter.Limit > 0 {
		query += fmt.Sprintf(" LIMIT $%d", argIdx)
		args = append(args, filter.Limit)
		argIdx++
	}

	if filter.Offset > 0 {
		query += fmt.Sprintf(" OFFSET $%d", argIdx)
		args = append(args, filter.Offset)
		argIdx++
	}

	rows, err := s.engine.db.Pool().Query(ctx, query, args...)
	if err != nil {
		return &corev1.ListResourceItemsResponse{
			Message: fmt.Sprintf("Failed to list resource items: %v", err),
			Success: false,
			Status:  commonv1.Status_STATUS_ERROR,
		}, nil
	}
	defer rows.Close()

	var items []*corev1.ResourceItem
	for rows.Next() {
		var item corev1.ResourceItem
		var created, updated time.Time
		var unifiedDataType, defaultValue, itemDisplayName sql.NullString
		var maxLength, precision, scale, ordinalPosition sql.NullInt32
		var privilegedClassification, detectionMethod sql.NullString
		var detectionConfidence sql.NullFloat64

		err := rows.Scan(
			&item.ItemId,
			&item.ContainerId,
			&item.TenantId,
			&item.WorkspaceId,
			&item.ResourceUri,
			&item.Protocol,
			&item.Scope,
			&item.ItemType,
			&item.ItemName,
			&itemDisplayName,
			&item.ItemPath,
			&item.DataType,
			&unifiedDataType,
			&item.IsNullable,
			&item.IsPrimaryKey,
			&item.IsUnique,
			&item.IsIndexed,
			&item.IsRequired,
			&item.IsArray,
			&item.ArrayDimensions,
			&defaultValue,
			&maxLength,
			&precision,
			&scale,
			&item.IsPrivileged,
			&privilegedClassification,
			&detectionConfidence,
			&detectionMethod,
			&ordinalPosition,
			&created,
			&updated,
		)
		if err != nil {
			continue
		}

		if unifiedDataType.Valid {
			item.UnifiedDataType = unifiedDataType.String
		}
		if itemDisplayName.Valid {
			item.ItemDisplayName = itemDisplayName.String
		}
		if defaultValue.Valid {
			item.DefaultValue = defaultValue.String
		}
		if maxLength.Valid {
			item.MaxLength = maxLength.Int32
		}
		if precision.Valid {
			item.Precision = precision.Int32
		}
		if scale.Valid {
			item.Scale = scale.Int32
		}
		if privilegedClassification.Valid {
			item.PrivilegedClassification = privilegedClassification.String
		}
		if detectionConfidence.Valid {
			item.DetectionConfidence = detectionConfidence.Float64
		}
		if detectionMethod.Valid {
			item.DetectionMethod = detectionMethod.String
		}
		if ordinalPosition.Valid {
			item.OrdinalPosition = ordinalPosition.Int32
		}

		item.Created = created.Format(time.RFC3339)
		item.Updated = updated.Format(time.RFC3339)

		items = append(items, &item)
	}

	// Get total count
	var totalCount int32
	if len(items) > 0 {
		countQuery := `SELECT COUNT(*) FROM resource_items WHERE 1=1`
		countArgs := []interface{}{}
		countArgIdx := 1

		if workspaceID != "" {
			countQuery += fmt.Sprintf(" AND workspace_id = $%d", countArgIdx)
			countArgs = append(countArgs, workspaceID)
			countArgIdx++
		}

		if filter.ContainerId != "" {
			countQuery += fmt.Sprintf(" AND container_id = $%d", countArgIdx)
			countArgs = append(countArgs, filter.ContainerId)
			countArgIdx++
		}

		s.engine.db.Pool().QueryRow(ctx, countQuery, countArgs...).Scan(&totalCount)
	}

	return &corev1.ListResourceItemsResponse{
		Items:      items,
		TotalCount: totalCount,
		Message:    fmt.Sprintf("Found %d resource items", len(items)),
		Success:    true,
		Status:     commonv1.Status_STATUS_SUCCESS,
	}, nil
}

// GetResourceItem gets a resource item by ID
func (s *Server) GetResourceItem(ctx context.Context, req *corev1.GetResourceItemRequest) (*corev1.GetResourceItemResponse, error) {
	defer s.trackOperation()()

	if req.ItemId == "" {
		return &corev1.GetResourceItemResponse{
			Message: "item_id is required",
			Success: false,
			Status:  commonv1.Status_STATUS_ERROR,
		}, nil
	}

	var item corev1.ResourceItem
	var created, updated time.Time
	var unifiedDataType, defaultValue, itemDisplayName sql.NullString
	var maxLength, precision, scale, ordinalPosition sql.NullInt32
	var privilegedClassification, detectionMethod sql.NullString
	var detectionConfidence sql.NullFloat64

	err := s.engine.db.Pool().QueryRow(ctx, `
		SELECT 
			item_id, container_id, tenant_id, workspace_id, resource_uri, protocol,
			scope, item_type, item_name, item_path, data_type, unified_data_type,
			is_nullable, is_primary_key, is_unique, is_indexed, is_required, is_array,
			array_dimensions, default_value, max_length, precision, scale,
			is_privileged, privileged_classification, detection_confidence, detection_method,
			ordinal_position, item_display_name, created, updated
		FROM resource_items
		WHERE item_id = $1
	`, req.ItemId).Scan(
		&item.ItemId,
		&item.ContainerId,
		&item.TenantId,
		&item.WorkspaceId,
		&item.ResourceUri,
		&item.Protocol,
		&item.Scope,
		&item.ItemType,
		&item.ItemName,
		&item.ItemPath,
		&item.DataType,
		&unifiedDataType,
		&item.IsNullable,
		&item.IsPrimaryKey,
		&item.IsUnique,
		&item.IsIndexed,
		&item.IsRequired,
		&item.IsArray,
		&item.ArrayDimensions,
		&defaultValue,
		&maxLength,
		&precision,
		&scale,
		&item.IsPrivileged,
		&privilegedClassification,
		&detectionConfidence,
		&detectionMethod,
		&ordinalPosition,
		&itemDisplayName,
		&created,
		&updated,
	)

	if err != nil {
		if err == sql.ErrNoRows {
			return &corev1.GetResourceItemResponse{
				Message: "Resource item not found",
				Success: false,
				Status:  commonv1.Status_STATUS_ERROR,
			}, nil
		}
		return &corev1.GetResourceItemResponse{
			Message: fmt.Sprintf("Failed to get resource item: %v", err),
			Success: false,
			Status:  commonv1.Status_STATUS_ERROR,
		}, nil
	}

	if unifiedDataType.Valid {
		item.UnifiedDataType = unifiedDataType.String
	}
	if defaultValue.Valid {
		item.DefaultValue = defaultValue.String
	}
	if maxLength.Valid {
		item.MaxLength = maxLength.Int32
	}
	if precision.Valid {
		item.Precision = precision.Int32
	}
	if scale.Valid {
		item.Scale = scale.Int32
	}
	if privilegedClassification.Valid {
		item.PrivilegedClassification = privilegedClassification.String
	}
	if detectionConfidence.Valid {
		item.DetectionConfidence = detectionConfidence.Float64
	}
	if detectionMethod.Valid {
		item.DetectionMethod = detectionMethod.String
	}
	if ordinalPosition.Valid {
		item.OrdinalPosition = ordinalPosition.Int32
	}
	if itemDisplayName.Valid {
		item.ItemDisplayName = itemDisplayName.String
	}

	item.Created = created.Format(time.RFC3339)
	item.Updated = updated.Format(time.RFC3339)

	return &corev1.GetResourceItemResponse{
		Item:    &item,
		Message: "Resource item retrieved successfully",
		Success: true,
		Status:  commonv1.Status_STATUS_SUCCESS,
	}, nil
}

// ModifyResourceItem modifies a resource item
func (s *Server) ModifyResourceItem(ctx context.Context, req *corev1.ModifyResourceItemRequest) (*corev1.ModifyResourceItemResponse, error) {
	defer s.trackOperation()()

	if req.ItemId == "" {
		return &corev1.ModifyResourceItemResponse{
			Message: "item_id is required",
			Success: false,
			Status:  commonv1.Status_STATUS_ERROR,
		}, nil
	}

	// Build the update query dynamically based on what fields are provided
	updates := []string{}
	args := []interface{}{}
	argIdx := 1

	// Add item_display_name to updates if provided
	if req.ItemDisplayName != nil {
		updates = append(updates, fmt.Sprintf("item_display_name = $%d", argIdx))
		args = append(args, *req.ItemDisplayName)
		argIdx++
	}

	// Always update the 'updated' timestamp
	updates = append(updates, fmt.Sprintf("updated = $%d", argIdx))
	args = append(args, time.Now())
	argIdx++

	// If no fields to update, return error
	if len(updates) == 1 { // Only 'updated' field
		return &corev1.ModifyResourceItemResponse{
			Message: "No fields to update",
			Success: false,
			Status:  commonv1.Status_STATUS_ERROR,
		}, nil
	}

	// Add item_id to args for WHERE clause
	args = append(args, req.ItemId)

	// Build and execute the update query
	query := fmt.Sprintf(`
		UPDATE resource_items
		SET %s
		WHERE item_id = $%d
		RETURNING item_id
	`, join(updates, ", "), argIdx)

	var itemID string
	err := s.engine.db.Pool().QueryRow(ctx, query, args...).Scan(&itemID)
	if err != nil {
		if err == sql.ErrNoRows {
			return &corev1.ModifyResourceItemResponse{
				Message: "Resource item not found",
				Success: false,
				Status:  commonv1.Status_STATUS_ERROR,
			}, nil
		}
		s.engine.logger.Errorf("Failed to modify resource item: %v", err)
		return &corev1.ModifyResourceItemResponse{
			Message: fmt.Sprintf("Failed to modify resource item: %v", err),
			Success: false,
			Status:  commonv1.Status_STATUS_ERROR,
		}, nil
	}

	// Get the updated item
	getResp, err := s.GetResourceItem(ctx, &corev1.GetResourceItemRequest{
		ItemId: req.ItemId,
	})
	if err != nil || !getResp.Success {
		return &corev1.ModifyResourceItemResponse{
			Message: "Resource item updated but failed to retrieve updated data",
			Success: false,
			Status:  commonv1.Status_STATUS_ERROR,
		}, nil
	}

	return &corev1.ModifyResourceItemResponse{
		Item:    getResp.Item,
		Message: "Resource item modified successfully",
		Success: true,
		Status:  commonv1.Status_STATUS_SUCCESS,
	}, nil
}

// Helper function to join strings
func join(strs []string, sep string) string {
	result := ""
	for i, str := range strs {
		if i > 0 {
			result += sep
		}
		result += str
	}
	return result
}

// Stub implementations for other methods (to be implemented if needed)

func (s *Server) GetResourceContainerByURI(ctx context.Context, req *corev1.GetResourceContainerByURIRequest) (*corev1.GetResourceContainerByURIResponse, error) {
	return &corev1.GetResourceContainerByURIResponse{
		Message: "Not implemented yet",
		Success: false,
		Status:  commonv1.Status_STATUS_PENDING,
	}, nil
}

func (s *Server) UpdateResourceContainerStatus(ctx context.Context, req *corev1.UpdateResourceContainerStatusRequest) (*corev1.UpdateResourceContainerStatusResponse, error) {
	return &corev1.UpdateResourceContainerStatusResponse{
		Success: false,
		Message: "Not implemented yet",
		Status:  commonv1.Status_STATUS_PENDING,
	}, nil
}

func (s *Server) GetResourceItemByURI(ctx context.Context, req *corev1.GetResourceItemByURIRequest) (*corev1.GetResourceItemByURIResponse, error) {
	return &corev1.GetResourceItemByURIResponse{
		Message: "Not implemented yet",
		Success: false,
		Status:  commonv1.Status_STATUS_PENDING,
	}, nil
}

func (s *Server) ListPrivilegedItems(ctx context.Context, req *corev1.ListPrivilegedItemsRequest) (*corev1.ListPrivilegedItemsResponse, error) {
	return &corev1.ListPrivilegedItemsResponse{
		Message: "Not implemented yet",
		Success: false,
		Status:  commonv1.Status_STATUS_PENDING,
	}, nil
}

func (s *Server) SearchResources(ctx context.Context, req *corev1.SearchResourcesRequest) (*corev1.SearchResourcesResponse, error) {
	return &corev1.SearchResourcesResponse{
		Message: "Not implemented yet",
		Success: false,
		Status:  commonv1.Status_STATUS_PENDING,
	}, nil
}
